@@ -1,5 +1,10 @@
 2004-10-01 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/Dialog_Partition_New.cc: marked 3 strings for translation.
+	* src/Operation.cc: fixed an i18n related crasher and did some cosmetic cleanups.
+
+2004-10-01 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/Dialog_About.cc,
 	  src/TreeView_Detail.cc: minor changes to a few strings
 
